fix project width and gap

--- a/styles/pages/home.module.scss
+++ b/styles/pages/home.module.scss
@@ -7,6 +7,7 @@
 .ProjectCard {
   border-radius: 30px;
   padding: 30px;
+  width: min-content;
   display: flex;
   flex-direction: column;
   cursor: pointer;
